# vecto

./: Cargo.toml  README.md
src/: from.rs  lib.rs  ops.rs
